include more testing and multi-traj training

--- a/nonloc_lib_test.ipynb
+++ b/nonloc_lib_test.ipynb
@@ -161,13 +161,14 @@
    "outputs": [],
    "source": [
     "# pysindy requires sequence inputs\n",
-    "train_seqs = [train_trajs[i] for i in range(train_trajs.shape[0])]"
+    "train_seqs = [train_trajs[i] for i in range(train_trajs.shape[0])]\n",
+    "optimizer = ps.STLSQ(threshold=1e-2, alpha=1e-12, normalize_columns=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "09a9a6ab",
+   "id": "62cb57b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,92 +194,43 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of training trajs used: 10\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 65.92073488235474\n",
-      "score:\n",
-      "avg nonloc score: 0.36683186530453543\n",
-      "model:\n",
-      "(x0)' = 0.051 x0_22 + 0.289 x0_12 + 0.060 x0_11 + 0.017 ind 3 int 0 fea 0 + -0.017 ind 3 int 3 fea 0\n",
-      "Num of training trajs used: 20\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 123.77639651298523\n",
-      "score:\n",
-      "avg nonloc score: 0.3714926944230803\n",
-      "model:\n",
-      "(x0)' = 0.055 x0_22 + 0.289 x0_12 + 0.071 x0_11\n",
-      "Num of training trajs used: 30\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 185.29145574569702\n",
-      "score:\n",
-      "avg nonloc score: 0.3745214631946734\n",
-      "model:\n",
-      "(x0)' = 0.054 x0_22 + 0.308 x0_12 + 0.078 x0_11\n",
-      "Num of training trajs used: 40\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 304.72034525871277\n",
-      "score:\n",
-      "avg nonloc score: 0.37288712605890095\n",
-      "model:\n",
-      "(x0)' = 0.053 x0_22 + 0.295 x0_12 + 0.074 x0_11\n",
-      "Num of training trajs used: 50\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 461.2665274143219\n",
-      "score:\n",
-      "avg nonloc score: 0.3722894728712658\n",
-      "model:\n",
-      "(x0)' = 0.054 x0_22 + 0.305 x0_12 + 0.071 x0_11\n",
-      "Num of training trajs used: 60\n",
-      "Predicted Num nonloc feature: 16\n",
-      "nonloc train time: 737.6020007133484\n",
-      "score:\n",
-      "avg nonloc score: 0.37236161449045635\n",
-      "model:\n",
-      "(x0)' = 0.053 x0_22 + 0.301 x0_12 + 0.072 x0_11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "optimizer = ps.STLSQ(threshold=1e-2, alpha=1e-12, normalize_columns=False)\n",
-    "# loop thru different numbers of trajs to train\n",
-    "for i in range(6):\n",
-    "    library_functions = []\n",
-    "    library_function_names = []\n",
+    "\n",
+    "# # loop thru different numbers of trajs to train\n",
+    "# for i in range(6):\n",
+    "#     library_functions = []\n",
+    "#     library_function_names = []\n",
     "    \n",
-    "    nonloc_lib = ps.NonlocPDELibrary(\n",
-    "    library_functions=library_functions,\n",
-    "    function_names=library_function_names,\n",
-    "    derivative_order=2, spatiotemporal_grid=spatiotemporal_grid,\n",
-    "    include_bias=True, differentiation_method=ps.SpectralDerivative, K = subdomain\n",
-    ")\n",
+    "#     nonloc_lib = ps.NonlocPDELibrary(\n",
+    "#         library_functions=library_functions,\n",
+    "#         function_names=library_function_names,\n",
+    "#         derivative_order=2, spatiotemporal_grid=spatiotemporal_grid,\n",
+    "#         include_bias=True, differentiation_method=ps.SpectralDerivative, K = subdomain\n",
+    "#     )\n",
     "\n",
-    "    # make both models\n",
-    "    model = ps.SINDy(feature_library=nonloc_lib, optimizer=optimizer)\n",
+    "#     # make both models\n",
+    "#     model = ps.SINDy(feature_library=nonloc_lib, optimizer=optimizer)\n",
     "\n",
-    "    # fit both models\n",
-    "    print(\"Num of training trajs used:\", (i+1)*10)\n",
-    "    s = tm.time()\n",
-    "    model.fit(train_seqs[:(i+1)*10], t=dt, multiple_trajectories = True)\n",
-    "    t = tm.time()\n",
+    "#     # fit both models\n",
+    "#     print(\"Num of training trajs used:\", (i+1)*10)\n",
+    "#     s = tm.time()\n",
+    "#     model.fit(train_seqs[:(i+1)*10], t=dt, multiple_trajectories = True)\n",
+    "#     t = tm.time()\n",
     "    \n",
-    "    print(\"nonloc train time:\", t-s)\n",
+    "#     print(\"nonloc train time:\", t-s)\n",
     "\n",
-    "    # save thee scores of thee models\n",
-    "    print(\"score:\")\n",
-    "    score = 0\n",
-    "    for j in range(num_test_traj):\n",
-    "        this_score = model.score(test_trajs[j], t=dt)\n",
-    "        score += this_score\n",
-    "    print(\"avg nonloc score:\", score/num_test_traj)\n",
-    "    print(\"model:\")\n",
-    "    model.print()\n",
-    "    nonloc_results['avg_nonloc_score'].append(score/num_test_traj)\n",
-    "    training_trajs_used.append((i+1)*10)"
+    "#     # save thee scores of thee models\n",
+    "#     print(\"score:\")\n",
+    "#     score = 0\n",
+    "#     for j in range(num_test_traj):\n",
+    "#         this_score = model.score(test_trajs[j], t=dt)\n",
+    "#         score += this_score\n",
+    "#     print(\"avg nonloc score:\", score/num_test_traj)\n",
+    "#     print(\"model:\")\n",
+    "#     model.print()\n",
+    "#     nonloc_results['avg_nonloc_score'].append(score/num_test_traj)\n",
+    "#     training_trajs_used.append((i+1)*10)"
    ]
   },
   {
@@ -286,100 +238,51 @@
    "execution_count": 9,
    "id": "fd95fe9b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of training trajs used: 10\n",
-      "pde train time: 21.23436403274536\n",
-      "score:\n",
-      "avg pde score: 0.36426009714549984\n",
-      "model:\n",
-      "(x0)' = 0.052 x0_22 + 0.289 x0_12 + 0.060 x0_11\n",
-      "Num of training trajs used: 20\n",
-      "pde train time: 37.92052412033081\n",
-      "score:\n",
-      "avg pde score: 0.37149269442308036\n",
-      "model:\n",
-      "(x0)' = 0.055 x0_22 + 0.289 x0_12 + 0.071 x0_11\n",
-      "Num of training trajs used: 30\n",
-      "pde train time: 56.00257444381714\n",
-      "score:\n",
-      "avg pde score: 0.3745214631946734\n",
-      "model:\n",
-      "(x0)' = 0.054 x0_22 + 0.308 x0_12 + 0.078 x0_11\n",
-      "Num of training trajs used: 40\n",
-      "pde train time: 74.12699317932129\n",
-      "score:\n",
-      "avg pde score: 0.37288712605890095\n",
-      "model:\n",
-      "(x0)' = 0.053 x0_22 + 0.295 x0_12 + 0.074 x0_11\n",
-      "Num of training trajs used: 50\n",
-      "pde train time: 92.42251324653625\n",
-      "score:\n",
-      "avg pde score: 0.37228947287126574\n",
-      "model:\n",
-      "(x0)' = 0.054 x0_22 + 0.305 x0_12 + 0.071 x0_11\n",
-      "Num of training trajs used: 60\n",
-      "pde train time: 110.3106153011322\n",
-      "score:\n",
-      "avg pde score: 0.37236161449045635\n",
-      "model:\n",
-      "(x0)' = 0.053 x0_22 + 0.301 x0_12 + 0.072 x0_11\n",
-      "Num of training trajs used: 70\n",
-      "pde train time: 128.46949076652527\n",
-      "score:\n",
-      "avg pde score: 0.37336383428405795\n",
-      "model:\n",
-      "(x0)' = 0.053 x0_22 + 0.307 x0_12 + 0.074 x0_11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(7):  \n",
-    "    library_functions = []\n",
-    "    library_function_names = []\n",
+    "# for i in range(6):  \n",
+    "#     library_functions = []\n",
+    "#     library_function_names = []\n",
     "    \n",
-    "    pde_lib = ps.PDELibrary(\n",
-    "    library_functions=library_functions, \n",
-    "    function_names=library_function_names, \n",
-    "    derivative_order=2, spatial_grid=spatial_grid, \n",
-    "    include_bias=True, differentiation_method=ps.SpectralDerivative\n",
-    ")\n",
+    "#     pde_lib = ps.PDELibrary(\n",
+    "#     library_functions=library_functions, \n",
+    "#     function_names=library_function_names, \n",
+    "#     derivative_order=2, spatial_grid=spatial_grid, \n",
+    "#     include_bias=True, differentiation_method=ps.SpectralDerivative\n",
+    "# )\n",
     "    \n",
-    "    model = ps.SINDy(feature_library=pde_lib, optimizer=optimizer)\n",
+    "#     model = ps.SINDy(feature_library=pde_lib, optimizer=optimizer)\n",
     "    \n",
-    "    print(\"Num of training trajs used:\", (i+1)*10)\n",
-    "    s = tm.time()\n",
-    "    model.fit(train_seqs[:(i+1)*10], t=dt, multiple_trajectories = True)\n",
-    "    t = tm.time()\n",
-    "    print(\"pde train time:\", t - s)\n",
-    "        # save thee scores of thee models\n",
-    "    print(\"score:\")\n",
-    "    score = 0\n",
-    "    for j in range(num_test_traj):\n",
-    "        this_score = model.score(test_trajs[j], t=dt)\n",
-    "        score += this_score\n",
-    "    print(\"avg pde score:\", score/num_test_traj)\n",
-    "    print(\"model:\")\n",
-    "    model.print()\n",
-    "    pde_results['avg_nonloc_score'].append(score/num_test_traj)"
+    "#     print(\"Num of training trajs used:\", (i+1)*10)\n",
+    "#     s = tm.time()\n",
+    "#     model.fit(train_seqs[:(i+1)*10], t=dt, multiple_trajectories = True)\n",
+    "#     t = tm.time()\n",
+    "#     print(\"pde train time:\", t - s)\n",
+    "#         # save thee scores of thee models\n",
+    "#     print(\"score:\")\n",
+    "#     score = 0\n",
+    "#     for j in range(num_test_traj):\n",
+    "#         this_score = model.score(test_trajs[j], t=dt)\n",
+    "#         score += this_score\n",
+    "#     print(\"avg pde score:\", score/num_test_traj)\n",
+    "#     print(\"model:\")\n",
+    "#     model.print()\n",
+    "#     pde_results['avg_nonloc_score'].append(score/num_test_traj)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d6a01ec2",
+   "execution_count": 10,
+   "id": "ba29c1e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add data to the workbook\n",
-    "for trajs, m1_score, m2_score in zip(training_trajs_used, nonloc_results['avg_nonloc_score'], pde_results['avg_nonloc_score']):\n",
-    "    ws.append([trajs, m1_score, m2_score])\n",
+    "# # Add data to the workbook\n",
+    "# for trajs, m1_score, m2_score in zip(training_trajs_used, nonloc_results['avg_nonloc_score'], pde_results['avg_nonloc_score']):\n",
+    "#     ws.append([trajs, m1_score, m2_score])\n",
     "\n",
-    "# Save the workbook\n",
-    "wb.save(str(subdomain) + '.xlsx')"
+    "# # Save the workbook\n",
+    "# wb.save(str(subdomain) + '.xlsx')"
    ]
   },
   {
@@ -387,13 +290,59 @@
    "execution_count": null,
    "id": "ff8abbe0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of training trajs used: 15\n",
+      "Predicted Num nonloc feature: 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train_traj_used = 15\n",
+    "indexing = 0\n",
+    "\n",
+    "library_functions = []\n",
+    "library_function_names = []\n",
+    "nonloc_lib = ps.NonlocPDELibrary(\n",
+    "    library_functions=library_functions,\n",
+    "    function_names=library_function_names,\n",
+    "    derivative_order=2, spatiotemporal_grid=spatiotemporal_grid,\n",
+    "    include_bias=True, differentiation_method=ps.SpectralDerivative, K = [4, 2]\n",
+    ")\n",
+    "# make both models\n",
+    "model = ps.SINDy(feature_library=nonloc_lib, optimizer=optimizer)\n",
+    "\n",
+    "# fit both models\n",
+    "print(\"Num of training trajs used:\", num_train_traj_used)\n",
+    "s = tm.time()\n",
+    "model.fit(train_seqs[indexing*num_train_traj_used:(indexing+1)*num_train_traj_used], t=dt, multiple_trajectories = True)\n",
+    "# model.fit(train_seqs[30:90], t=dt, multiple_trajectories = True)\n",
+    "t = tm.time()\n",
+    "print(\"nonloc train time:\", t-s)\n",
+    "\n",
+    "# save thee scores of thee models\n",
+    "print(\"score:\")\n",
+    "test_score = 0\n",
+    "for j in range(num_test_traj):\n",
+    "    test_score += model.score(test_trajs[j], t=dt)\n",
+    "print(\"avg nonloc_test score:\", test_score/num_test_traj)\n",
+    "\n",
+    "# checking for over/under fitting\n",
+    "train_score = 0\n",
+    "for j in range(num_train_traj_used):\n",
+    "    train_score += model.score(train_trajs[j], t=dt)\n",
+    "print(\"avg nonloc_train score:\", train_score/num_train_traj_used)\n",
+    "print(\"model:\")\n",
+    "model.print()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c10c5dbd",
+   "id": "d0f7eaf7-7098-4eea-98f6-731facaf5145",
    "metadata": {},
    "outputs": [],
    "source": []
